example/lib/src/l10n/errors/app_lo.arb
{
  "@@locale": "lo",
  "error": "ມີບັດສະບັດ",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "ເກິດບັດທີ່ບໍ່ຄາດຄິດ",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Bug report sent successfully.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}